fix(M7): 第2轮AI审查修复（实体UUID键/注册表锁/状态机幂等/主线程调度）